@@ -1,3 +1,8 @@
+* Thu Feb 22 2017 Trevor Vaughan <tvaughan@onyxpoint.com> - 7.0.1-0
+- Changed auditd::failure_mode to '1' by default since the compliant audit
+  rules were causing routine system restarts. The new value will default to
+  sending printk messages when the buffer is full.
+
 * Tue Jan 12 2017 Trevor Vaughan <tvaughan@onyxpoint.com> - 7.0.0-0
 - In response to the DISA STIG Requirements
   - Added 'open_by_handle_at' to the 'access' key
